objects/Implementation_Coordinator__c.object
<CustomObject>
    <fields>
        <fullName>Is_SSCRs_Applicable__c</fullName>
        <label>Is SSCRs Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Status_Details_Applicable__c</fullName>
        <label>Is Status Details Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_A_HRA_Plan__c</fullName>
        <label>Is There A HRA Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_A_HSA_Plan__c</fullName>
        <label>Is There A HSA Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_A_HSA_Plus_Plan__c</fullName>
        <label>Is There A HSA Plus Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_A_QHE_Plan__c</fullName>
        <label>Is There A QHE Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_A_QHE_Plus_Plan__c</fullName>
        <label>Is There A QHE Plus Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_Integrated_Rx__c</fullName>
        <label>Is There Integrated Rx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Networks_Being_Set_Up_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List Select Networks (New Or Existing)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Of_Bank_3rd_Party_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Of Bank - 3rd Party Only</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Of_Pharmacy_Benefit_Manager__c</fullName>
        <label>Name Of Pharmacy Benefit Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem Prescription Drug Plan</fullName>
                </value>
                <value>
                    <fullName>Catamaran</fullName>
                </value>
                <value>
                    <fullName>CVS/Caremark</fullName>
                </value>
                <value>
                    <fullName>EnvisionRx</fullName>
                </value>
                <value>
                    <fullName>Express Scripts</fullName>
                </value>
                <value>
                    <fullName>Kroger</fullName>
                </value>
                <value>
                    <fullName>MedImpact</fullName>
                </value>
                <value>
                    <fullName>Navitus</fullName>
                </value>
                <value>
                    <fullName>OptumRx</fullName>
                </value>
                <value>
                    <fullName>Pharmavail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Or_Existing_IBVD_Crosswalk__c</fullName>
        <label>New Or Existing IBVD/Crosswalk</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Packages__c</fullName>
        <label>New Packages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Plan_Year_Benefits_Obtained__c</fullName>
        <label>New Plan Year Benefits Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Medical_Benefits_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Rx_Commingle_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Rx Commingle ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Rx_Commingle_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Rx Commingle ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Rx_Commingle_Status__c</fullName>
        <label>Non-Rx Commingle Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_SME_Area_Status_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Plan_Designs__c</fullName>
        <label>Number Of Plan Designs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Readiness_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Readiness Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Overall Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_For_List_View_Filter__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner_For List View Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_I_Log_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PM&amp;I Log Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_Status__c</fullName>
        <label>Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Configurator_Form_Status__c</fullName>
        <label>Product Configurator Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_CDH_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTC_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JIRA Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RX_Integration_Type__c</fullName>
        <label>RX Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Realtime LITES</fullName>
                </value>
                <value>
                    <fullName>Realtime ODS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSCR_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSCR Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSCR_Funding_Status__c</fullName>
        <label>SSCR Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved For Requirements</fullName>
                </value>
                <value>
                    <fullName>Approved For Delivery</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Yet Prioritized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSCR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSCR_Status__c</fullName>
        <label>SSCR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSCR In Progress</fullName>
                </value>
                <value>
                    <fullName>SSCR Complete</fullName>
                </value>
                <value>
                    <fullName>SSCR Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specialty Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Integration_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Integration Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Interfaces__c</fullName>
        <label>Vendor Interfaces</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_SME_Area_Status_Applicable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WageWorks_Setup_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WageWorks Setup ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Watchlist_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Watchlist Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Website Details</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Status__c</fullName>
        <label>Website Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_SME_Area_Status_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Implementation Coordinator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Implementation_Coordinator_Local_Implementation_Coordinator</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Coordinator - Local</label>
        <queue>Implementation_Coordinator_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Implementation_Coordinator</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Owner_the_Logged_in_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Implementation Coordinator</label>
    </listViews>
    <nameField>
        <displayFormat>IMPCORD-{000000}</displayFormat>
        <label>Implementation Coordinator Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Coordinators</pluralLabel>
    <recordTypes>
        <fullName>JAA_National_And_Local_NASCO</fullName>
        <active>true</active>
        <label>JAA National And Local NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>JAA_National_And_Local_WGS</fullName>
        <active>true</active>
        <label>JAA National And Local WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_and_Local_NASCO</fullName>
        <active>true</active>
        <label>National and Local NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_and_Local_WGS</fullName>
        <active>true</active>
        <label>National and Local WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>